<resources>
    <string name="app_name">App Portfolio</string>
    <string name="action_settings">Settings</string>


    <string name="menu_button_1">Spotify Streamer</string>
    <string name="menu_button_2">Scores App</string>
    <string name="menu_button_3">Library App</string>
    <string name="menu_button_4">Build it Bigger</string>
    <string name="menu_button_5">XYZ Reader</string>
    <string name="menu_button_6">Capstone: My Own APP!!!</string>
</resources>
