<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    >

    <TextView
        android:text="My Nanodegree Apps!"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="15dp"
        />

    <Button
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:text="@string/menu_button_1"
        android:background="@color/orrange"
        android:layout_margin="5dp"
        android:id="@+id/menu_button_1"
        />
    <Button
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:text="@string/menu_button_2"
        android:background="@color/orrange"
        android:layout_margin="5dp"
        android:id="@+id/menu_button_2"
        />
    <Button
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:text="@string/menu_button_3"
        android:background="@color/orrange"
        android:layout_margin="5dp"
        android:id="@+id/menu_button_3"
        />
    <Button
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:text="@string/menu_button_4"
        android:background="@color/orrange"
        android:layout_margin="5dp"
        android:id="@+id/menu_button_4"
        />
    <Button
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:text="@string/menu_button_5"
        android:background="@color/orrange"
        android:layout_margin="5dp"
        android:id="@+id/menu_button_5"
        />
    <Button
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:text="@string/menu_button_6"
        android:background="@color/pink"
        android:textColor="@color/white"
        android:layout_margin="5dp"
        android:id="@+id/menu_button_6"
        />

</LinearLayout>
